changed images and more

--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -510,32 +510,41 @@ Und zuletzt die Auswertung als Diagramm aus dem NasaTLX Auswertungsbogen.
 	\label{fig:result3}
 \end{figure}
 
-\subsection{deskriptive Statistik}
-Die hiermit verwendeten Auswertungskriterien beziehen sich auf die zentrale Tendenz, Variabilität und der Verteilungsform. Die zugrundeliegenden Erhebungswerte werden aus den Bögen des Isometric und des NasaTLX verwendet.
-
-- Führen Sie eine statistsiche Auswertung mittels deskriptive Verfahren aus und diskutieren Sie diese (mindestens zentrale Tendenz und Variabilität). Stellen Sie die Ergebnisse grafisch dar.\\
-
 
 \subsection{AttrakDiff}
-Mit dem AttrakDiff Fragebogen wurde die Beurteiling der Interaktionstechnik durchgefühht. Es wurde ebenso versucht die Qualität der Nutzererfahrung zu ermitteln. Vorallem war hier vordergründig die Nutzererfahrung im Zusammenspiel mit dem Tangible Interface interessant und ob das TI dem Nutzer einen Mehrwert bringt.
+Mit dem AttrakDiff Fragebogen wurde die Beurteiling der Interaktionstechnik durchgeführt. Es wurde ebenso versucht die Qualität der Nutzererfahrung zu ermitteln. Vorallem war hier vordergründig die Nutzererfahrung im Zusammenspiel mit dem Tangible Interface interessant und ob das TI dem Nutzer einen Mehrwert bringt.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[angle=0,scale=0.6]{attrakdiff_result}
-	\caption{Ergebnis des AttrakDiff Fragebogens}
+	\includegraphics[angle=0,scale=0.4]{attrakdiff_result}
+	\caption{Profil der Wortpaare des AttrakDiff Fragebogens}
 	\label{fig:result4}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[angle=0,scale=0.6]{attrakdiff_result2}
-	\caption{Medianbildung des AttrakDiff Fragebogens}
+	\includegraphics[angle=0,scale=0.5]{attrakdiff_result2}
+	\caption{Mittelwerte des AttrakDiff Fragebogens}
 	\label{fig:result5}
 \end{figure}
 
 Nach erstmaligem betrachten der Auswertung zeigt sich ein eher verhaltenes Ergebnis.
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[angle=0,scale=0.5]{attrakdiff_result3}
+	\caption{Portfoliodarstellung des AttrakDiff Fragebogens}
+	\label{fig:result6}
+\end{figure}
+
 - AttrakDiff Fragebogen auswerten, begründen, dass wir "user experience" verwendet haben und das Tangible Interface
+
+
+\subsection{deskriptive Statistik}
+Die hiermit verwendeten Auswertungskriterien beziehen sich auf die zentrale Tendenz, Variabilität und der Verteilungsform. Die zugrundeliegenden Erhebungswerte werden aus den Bögen des Isometric, NasaTLX und dem AttrakDiff verwendet.
+
+- Führen Sie eine statistsiche Auswertung mittels deskriptive Verfahren aus und diskutieren Sie diese (mindestens zentrale Tendenz und Variabilität). Stellen Sie die Ergebnisse grafisch dar.\\
+
 
 
 \subsection{Resultat}
