more written text

--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -486,29 +486,29 @@ Bei der Evaluation wurden die Bögen für den Isometric und den NasaTLX gewählt
 \subsection{Evaluationsauswertung}
 Die Ergebnisse nach der Auswertung der Evaluationsbögen mittels gegebener Exceltabellen und Diagramme, werden in den folgenden Bildern deutlich. Eine Erläuterung erfolgt danach.
 
-Als erstes werden die gemittelten Werte des Isometric dargelegt.
 \begin{figure}[H]
 	\centering
 	\includegraphics[angle=0,scale=1]{iso_metric_result}
 	\caption{Resultat der Isometric Auswertung}
 	\label{fig:result1}
 \end{figure}
+Als erstes werden die gemittelten Werte des Isometric dargelegt.
 
-Als nächstes ist das Diagram zu den gemittelten Werten angegeben
 \begin{figure}[H]
 	\centering
 	\includegraphics[angle=0,scale=0.6]{iso_metric_diagram}
 	\caption{Resultat des Isometric Diagramms}
 	\label{fig:result2}
 \end{figure}
+Als nächstes ist das Diagram zu den gemittelten Werten angegeben
 
-Und zuletzt die Auswertung als Diagramm aus dem NasaTLX Auswertungsbogen.
 \begin{figure}[H]
 	\centering
 	\includegraphics[angle=0,scale=0.4]{nasatlx_diagram}
 	\caption{Resultat des NasaTLX Diagramms}
 	\label{fig:result3}
 \end{figure}
+Und zuletzt die Auswertung als Diagramm aus dem NasaTLX Auswertungsbogen.
 
 
 \subsection{AttrakDiff}
@@ -520,6 +520,7 @@ Mit dem AttrakDiff Fragebogen wurde die Beurteiling der Interaktionstechnik durc
 	\caption{Profil der Wortpaare des AttrakDiff Fragebogens}
 	\label{fig:result4}
 \end{figure}
+Bei dem Profil der Wortpaare sind die Extremwerte besonders interessant, da sie Aufschluss darüber geben, ob die Anwendung in den jeweiligen Eigenschaften besonders kritisch oder besonders gut aufgestellt ist. Die einzigen positiven Eigenschaften sind hier mit einfach, direkt, vorraussagbar und handhabbar zu benennen. Besonders negativ fallen Werte wie minderwertig, trennt mich, lahm, herkömmlich und schlecht auf. Insgesamt tendiert die Testperson wenig zur Mitte der gestellten Fragen und leistet somit ein deutliches Ergebnis.
 
 \begin{figure}[H]
 	\centering
@@ -528,7 +529,7 @@ Mit dem AttrakDiff Fragebogen wurde die Beurteiling der Interaktionstechnik durc
 	\label{fig:result5}
 \end{figure}
 
-Nach erstmaligem betrachten der Auswertung zeigt sich ein eher verhaltenes Ergebnis.
+Nach erstmaligem betrachten der Auswertung zeigt sich ein eher verhaltenes Ergebnis. Es lässt rückschlüsse darauf ziehen, dass die Anwendung einen eher schlechten Eindruck auf die Testperson macht. Die Pragamtische Qualität liegt bei 0,86 welche die einzige Positive Kennzahl ausmacht. Die weiteren Kennzahlen der Hedonistischen Qualität sowie der Attraktivität liegen im negativen Bereich. Dadurch wird deutlich, dass die Anwendung den Nutzer eher abschreckt und ihm das Gefühl vermittelt die Anwendung nicht gebrauchen zu können.
 
 \begin{figure}[H]
 	\centering
@@ -537,25 +538,18 @@ Nach erstmaligem betrachten der Auswertung zeigt sich ein eher verhaltenes Ergeb
 	\label{fig:result6}
 \end{figure}
 
-- AttrakDiff Fragebogen auswerten, begründen, dass wir "user experience" verwendet haben und das Tangible Interface
+Die Portfoliodarstellung zeigt deutlich, dass die Anwendung nicht in den neutralen Bereich wandert sondern eher in den unteren Kategorien eingeordnet ist. Somit ist klar, dass die Anwendung zu handlungsorientiert ist und dem Nutzer nicht das Gefühl gibt einen Mehrwert zu haben oder nützlich zu sein. Das liegt zum einen an der Art und Weise der Umsetzung und zum anderen an der Schwierigkeit der Einbindung eines Tangilbe Interfaces. Zugleich wurde versucht, die Nutzererfahrung mithilfe des Tangible Interfaces zu verbessern, sodass der Nutzer die Informationen mithilfe dessen erkunden kann. Dadurch kann ein wesentlicher Mehrwert entstehen bei entsprechender Umsetzung und Implementierung.
 
 
-\subsection{deskriptive Statistik}
-Die hiermit verwendeten Auswertungskriterien beziehen sich auf die zentrale Tendenz, Variabilität und der Verteilungsform. Die zugrundeliegenden Erhebungswerte werden aus den Bögen des Isometric, NasaTLX und dem AttrakDiff verwendet.
+%\subsection{deskriptive Statistik}
+%Die hiermit verwendeten Auswertungskriterien beziehen sich auf die zentrale Tendenz, Variabilität und der Verteilungsform. Die zugrundeliegenden Erhebungswerte werden aus den Bögen des Isometric, NasaTLX und dem AttrakDiff verwendet.
 
-- Führen Sie eine statistsiche Auswertung mittels deskriptive Verfahren aus und diskutieren Sie diese (mindestens zentrale Tendenz und Variabilität). Stellen Sie die Ergebnisse grafisch dar.\\
-
+%- Führen Sie eine statistsiche Auswertung mittels deskriptive Verfahren aus und diskutieren Sie diese (mindestens zentrale Tendenz und Variabilität). Stellen Sie die Ergebnisse grafisch dar.\\
 
 
 \subsection{Resultat}
-Nach kritischer Betrachtung der Ergebnisse, scheint die Anwendung insgesamt mangelhaft.
+Nach kritischer Betrachtung der Ergebnisse, scheint die Anwendung insgesamt mangelhaft. Der Nutzer ist nicht überzeugt vom Konzept und der Umsetzung. Somit benötigt die Anwendung wie auch die Idee eine grundlegende Änderung des Konzeptes und eine wesentlich konsequentere Umsetzung in der Implementierung. Die Projektidee für sich beinhaltet gutes Potential. Wenn das Tangible Interface auch physisch vorhanden ist und in einem klickbaren Dummy oder in einer ersten prototypischen Anwendung einsatz findet, ist es auch möglich detailliertere Informationen zu dem Nutzen und der Nutzererfahrung zu erhalten. In diesem Stadium ist somit nicht möglich verwertbare oder hochwertige Informationen zu erhalten.
 
-- Diskutieren Sie die Ergebnisse mit Hinblick auf den Erfolg der Projektidee und mögliche Weiterentwicklungen.\\
-
-
-- Dokumentieren und interpretieren Sie die Ergebnisse unter Bezugnahme auf Inhalte der Vorlesung
-
-6 Seiten sind gut!
 
 \section{Zusammenfassung}
 Die Analyse der bestehenden Systeme ergab, dass es die Technologien 3D-Druck, AR und VR ermöglichen, ein virtuelles Museum auf unterschiedlichste Art und Weise entstehen zu lassen. Eine Fokusgruppe beschäftigte sich mit dem Schwerpunkt, welche Interaktionsmöglichkeiten im Museum möglich sind. Die Interaktion innerhalb eines virtuellen Museums ist mit TIs denkbar. Durch ein Objekt in der Hand eines Museumsbesuchers können virtuelle deidimensional dargestellte Exponate bewegt und gesteuert werden. Weiterhin wurde festgestellt, dass die Technologie AR ein Museum ergänzen kann. Aus den definierten Zielen der Anwendungsfälle, sowie aus Ergebnissen der Fokusgruppe resultieren die Funktionen zur Entwicklung eines Systems. Sie wurden in Form eines Papierprototypen umgesetzt. Es entstanden vier Papierprototypen, wobei zwei für die heuristische Analyse verwendet wurden. Entstanden sind zwei AR-Anwendungen für ein Naturkundemuseum und ein TI zur Steuerung der Objekte. Nach der Durchführung der heuristischen Analyse konnten neue Ziele anhand der gefundenen  Probleme in der Usability bezüglich der User Experience und Feature für den digitalen Prototypen formuliert werden. Das Ergebnis ist ein digitaler Prototyp, der Anwendung in einem Museum finden kann, um Exponate mit Hilfe eines TI erkunden zu können.\\ 
