--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -573,7 +573,7 @@ Die Probanden sollen im Verlauf des Testes folgende Funktionen ausführen
 	\item Wechsel zum Modus „Entdecken“
 \end{itemize}
 \subsection{Evaluationsauswertung}
-Die Ergebnisse nach der Auswertung der Evaluationsbögen mittels gegebener Exceltabellen und Diagramme, werden in den folgenden Bildern deutlich. Eine Erläuterung erfolgt danach.
+Die Ergebnisse nach der Auswertung der Evaluationsbögen mittels gegebener Exceltabellen und Diagramme, werden in den folgenden Bildern deutlich.
 
 \begin{figure}[H]
 	\centering
