--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -585,7 +585,7 @@ Als erstes werden die gemittelten Werte des Isometric dargelegt.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[angle=0,scale=0.6]{iso_metric_diagram}
+	\includegraphics[angle=0,scale=0.5]{iso_metric_diagram}
 	\caption{Resultat des Isometric Diagramms}
 	\label{fig:result2}
 \end{figure}
@@ -598,6 +598,8 @@ Als nächstes ist das Diagram zu den gemittelten Werten angegeben
 	\label{fig:result3}
 \end{figure}
 Und zuletzt die Auswertung als Diagramm aus dem NasaTLX Auswertungsbogen.
+
+Bei dem Isometric Fragebogen zeigt die Auswertung, dass die Exceltabelle deutlich unterdurchnittliche Werte liefert. Im Vergleich zu anderen Werten aus den Vorlesungsfolien wird erkennbar, dass die Kennwerte nicht representativ für ein erflogversprechendes Projekt sind. Durch mangelnde Testpersonen wird ein stark verfälschtes Ergbnis erwartet. Dies bezieht sich ebenfalls auf den AttrakDiff Fragebogen. 
 
 
 \subsubsection{AttrakDiff}
@@ -637,7 +639,7 @@ Die Portfoliodarstellung zeigt deutlich, dass die Anwendung nicht in den neutral
 
 
 \subsubsection{Resultat}
-Nach kritischer Betrachtung der Ergebnisse, scheint die Anwendung insgesamt mangelhaft. Der Nutzer ist nicht überzeugt vom Konzept und der Umsetzung. Somit benötigt die Anwendung wie auch die Idee eine grundlegende Änderung des Konzeptes und eine wesentlich konsequentere Umsetzung in der Implementierung. Die Projektidee für sich beinhaltet gutes Potential. Wenn das Tangible Interface auch physisch vorhanden ist und in einem klickbaren Dummy oder in einer ersten prototypischen Anwendung einsatz findet, ist es auch möglich detailliertere Informationen zu dem Nutzen und der Nutzererfahrung zu erhalten. In diesem Stadium ist somit nicht möglich verwertbare oder hochwertige Informationen zu erhalten.
+Nach kritischer Betrachtung der Ergebnisse, scheint die Anwendung insgesamt mangelhaft. Der Nutzer ist nicht überzeugt vom Konzept und der Umsetzung. Somit benötigt die Anwendung wie auch die Idee eine grundlegende Änderung des Konzeptes und eine wesentlich konsequentere Umsetzung in der Implementierung. Die Projektidee für sich, beinhaltet gutes Potential. Wenn das Tangible Interface auch physisch vorhanden ist und in einem klickbaren Dummy oder in einer ersten prototypischen Anwendung einsatz findet, ist es auch möglich detailliertere Informationen zu dem Nutzen und der Nutzererfahrung zu erhalten. In diesem Stadium ist somit nicht möglich verwertbare oder hochwertige Informationen zu erhalten.
 
 
 \section{Zusammenfassung}
