--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -637,6 +637,8 @@ Die Portfoliodarstellung zeigt deutlich, dass die Anwendung nicht in den neutral
 
 %- Führen Sie eine statistsiche Auswertung mittels deskriptive Verfahren aus und diskutieren Sie diese (mindestens zentrale Tendenz und Variabilität). Stellen Sie die Ergebnisse grafisch dar.\\
 
+% nicht möglich aufgrund mangelnder Testdaten...
+
 
 \subsubsection{Resultat}
 Nach kritischer Betrachtung der Ergebnisse, scheint die Anwendung insgesamt mangelhaft. Der Nutzer ist nicht überzeugt vom Konzept und der Umsetzung. Somit benötigt die Anwendung wie auch die Idee eine grundlegende Änderung des Konzeptes und eine wesentlich konsequentere Umsetzung in der Implementierung. Die Projektidee für sich, beinhaltet gutes Potential. Wenn das Tangible Interface auch physisch vorhanden ist und in einem klickbaren Dummy oder in einer ersten prototypischen Anwendung einsatz findet, ist es auch möglich detailliertere Informationen zu dem Nutzen und der Nutzererfahrung zu erhalten. In diesem Stadium ist somit nicht möglich verwertbare oder hochwertige Informationen zu erhalten.
