--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -67,8 +67,8 @@
 \author{
 		Adrian Franken (Matr.nr.:s0538115),\\
 		Chris-Andr\'{e} Posselt (Matr.nr.:s0532341),\\
-		Elsa Buchholz (Matr.nr.:s0544180),\\ 
-		Igor Olegovich Turanin (Matr.nr.:s0549350)
+		Elsa Buchholz (Matr.nr.:s0544180)
+		%Igor Olegovich Turanin (Matr.nr.:s0549350)
 	   }
 
 %
