--- a/doc/user_centered_design.tex
+++ b/doc/user_centered_design.tex
@@ -532,7 +532,8 @@ Auf Basis der neuen Auswertung wurde daraufhin ein einheitliches Konzept entwick
 \subsubsection{Auswirkungen und Veränderungen}
 Wir bekamen Schwierigkeiten bei der Umsetzung unseres Steuerungskonzeptes, da uns das TI fehlte, die Umgebung 3D-Objekte verwendet und der Prototyp auf Webbasis funktioniert. Aufgrund von Zeitmangel wurden nur sehr eingeschränkte Steuerungsmöglichkeiten implementiert, welche die grundsätzlichen Steuerungsdimensionen abbildet. Bei 3D-Objekten mit freier Steuerung ist die Permutation von abzubildenden Objektzuständen viel zu hoch. Abhilfe würde hier eine WebGl basierte in Echtzeit gerenderte selbst entwickelte 3D-Szenerie schaffen. Das Steuerungssimulationsinterface würde dann mit der 3D-Steuerung des Objektes programmatisch verbunden. Als Auswirkung müssen wir feststellen, dass eine weitere Evaluation mit den gleichen Zielen durchgeführt werden müsste, dieses mal mit einer in Echtzeit gerenderten 3D-Umgebung. Das sollte das Steuerungskonzept für den Nutzer weniger abstrakt erscheinen lassen. Diese erneute Evaluation sollte auf jeden Fall noch vor der Implementierung eines weiteren Prototypen auf der Basis eines echten TI erfolgen.
 \subsubsection{Empfehlung}
-In zukünftigen Projekten mit einer 3D-Technologie sollte unbedingt der benötigte Mehraufwand für die Entwicklung eines adäquaten Prototypen berücksichtigt werden. Die Implementation einer überzeugenden 3D-Umgebung ist selbst mit Frameworks wie Three.js non-trivial. Des weiteren kann auf die Entwicklung eines reinen Klick-Prototypen verzichtet werden, da ein Prototyp mit 3D-Technologie seine Aufgaben übernimmt. 
+In zukünftigen Projekten mit einer 3D-Technologie sollte unbedingt der benötigte Mehraufwand für die Entwicklung eines adäquaten Prototypen berücksichtigt werden. Die Implementation einer überzeugenden 3D-Umgebung ist selbst mit Frameworks wie Three.js non-trivial. Des weiteren kann auf die Entwicklung eines reinen Klick-Prototypen verzichtet werden, da ein Prototyp mit 3D-Technologie seine Aufgaben übernimmt.
+\subsection{Prototyp} 
 \subsubsection{Steuerung und Modi}
 Der Zweck des Prototyps ist die Simulation einer Benutzersteuerung via TI. Da dies der erste Prototyp ist, wird auf ein echte TI verzichtet und der Ablauf in einem Klick-Prototypen simuliert. Die Simulation erfolgt durch die Verwendung eines Kontroll-Panels mit Buttons als Ersatz für die ausführbaren Events mit dem TI. So stehen klassische Pfeilbuttons für die Rotation der entsprechenden Objektachse des TI zur Verfügung. Es gibt einen Button für das Drücken des TI sowie einen Button für das Schütteln des TI.
 Mit diesen Events werden, abhängig vom jeweiligen Modus zum Teil unterschiedliche Steuerungsalgorithmen ausgelöst.
